--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -8,13 +8,17 @@
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
 <!--            추가한부분-->
-            {{#userName}} //(1)
+            {{#userName}}
+<!--                //(1)-->
                 Logged in as: <span id="user">{{userName}}</span>
-                <a href="/logout" class="btn btn-info active" role="button">Logout</a> //(2)
+                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+<!--                //(2)-->
             {{/userName}}
-            {{^userName}} //(3)
+            {{^userName}}
+<!--                //(3)-->
                 <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
-                <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a> //(4)
+                <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
+<!--                //(4)-->
             {{/userName}}
 <!--            추가한부분-->
         </div>
